[package]
name = "ngrok"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.0"
muxado = { git = "ssh://github.com/ngrok/muxado-rs", version = "0.1.0" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
base64 = "0.13.0"

[build-dependencies]
prost-build = "0.11.1"