[package]
name = "cargo-doc-ngrok"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A cargo subcommand to build and serve documentation via ngrok"
repository = "https://github.com/ngrok/ngrok-rs"

[dependencies]
axum = "0.6.1"
cargo_metadata = "0.15.2"
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
http = "0.2.8"
hyper = { version = "0.14.23", features = ["server"] }
hyper-staticfile = "0.9.2"
ngrok = { path = "../ngrok", version = "0.8", features = ["hyper"] }
tokio = { version = "1.23.0", features = ["full"] }
watchexec = "2.0.2"
