[package]
name = "cargo-doc-ngrok"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A cargo subcommand to build and serve documentation via ngrok"
repository = "https://github.com/ngrok/ngrok-rust"

[dependencies]
awaitdrop = "0.1.2"
axum = "0.7.4"
bstr = "1.4.0"
cargo_metadata = "0.15.2"
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
http = "1.0.0"
hyper = { version = "1.1.0", features = ["server"] }
hyper-staticfile = "0.10.0"
hyper-util = { version = "0.1.3", features = ["server", "tokio", "server-auto", "http1"] }
ngrok = { path = "../ngrok", version = "0.15.0", features = ["hyper", "axum"] }
tokio = { version = "1.23.0", features = ["full"] }
watchexec = "2.3.0"
# watchexec-signals 1.0.1 causes a compilation error.
# this will likely be ironed out as they release watchexec 3.0.0 components.
# https://github.com/watchexec/watchexec/issues/701
watchexec-signals = "=1.0.0"
