[package]
name = "muxado"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
bytes = "1.1.0"
crossbeam = "0.8.1"
futures = { version = "0.3.17", features = [ "bilock", "unstable" ] }
newtype = "0.2.1"
thiserror = "1.0.30"
tokio-util = { version = "0.6.9", features = [ "codec" ] }
tokio = { version = "1.14.0" }
anyhow = { version = "1.0.47", optional = true }
pin-utils = "0.1.0"
pin-project = "1.0.8"
tracing = "0.1.29"
educe = "0.4.18"
tracing-subscriber = { version = "0.3.3", optional = true, features = ["env-filter"] }
tracing-opentelemetry = { version = "0.16.0", optional = true }
tracing-core = { version = "0.1.21", optional = true }
opentelemetry = { version = "0.16.0", optional = true }
opentelemetry-jaeger = { version = "0.15.0", optional = true }
async-trait = "0.1.52"
console-subscriber = { version = "0.1.0", optional = true }
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["io-util", "time", "rt-multi-thread", "macros"] }
tracing-test = "0.2.1"

[features]
default = ["tokio_rt", "bin"]
bin = ["tokio/full", "tokio/tracing", "tracing-core", "opentelemetry-jaeger", "opentelemetry", "tracing-opentelemetry", "anyhow", "tracing-subscriber", "console-subscriber"]
tokio_rt = ["tokio/rt-multi-thread"]

[[bin]]
name = "client"
required-features = ["bin"]

[[bin]]
name = "server"
required-features = ["bin"]
