[package]
name = "muxado"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The muxado stream multiplexing protocol"
repository = "https://github.com/ngrok/ngrok-rs"

[dependencies]
bitflags = "1.3.2"
bytes = "1.1.0"
futures = { version = "0.3.17", features = [ "bilock", "unstable" ] }
thiserror = "1.0.30"
tokio-util = { version = "0.6.9", features = [ "codec" ] }
tokio = { version = "1.14.0" }
pin-utils = "0.1.0"
pin-project = "1.0.8"
tracing = "0.1.29"
async-trait = "0.1.52"
rand = "0.8.5"

[dev-dependencies]
anyhow = { version = "1.0.47" }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.14.0", features = ["full", "tracing", "io-util", "time", "rt-multi-thread", "macros"] }
tracing-core = { version = "0.1.21" }
tracing-test = "0.2.1"

[features]
default = ["tokio_rt", "bin"]
bin = ["tokio/full", "tokio/tracing"]
tokio_rt = ["tokio/rt-multi-thread"]