[package]
name = "muxado"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The muxado stream multiplexing protocol"
repository = "https://github.com/ngrok/ngrok-rust"

[dependencies]
bitflags = "1.3.2"
bytes = "1.3.0"
futures = { version = "0.3.25", features = [ "bilock", "unstable" ] }
thiserror = "1.0.37"
tokio = { version = "1.44.1", features = ["io-util", "macros", "rt", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
pin-project = "1.0.12"
tracing = "0.1.37"
async-trait = "0.1.59"
rand = "0.8.5"
awaitdrop = "0.1.1"

[dev-dependencies]
anyhow = { version = "1.0.66" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing-core = { version = "0.1.30" }
tracing-test = "0.2.3"
