[package]
name = "ngrok"
version = "0.11.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The ngrok agent SDK"
repository = "https://github.com/ngrok/ngrok-rs"

[dependencies]
muxado = { path = "../muxado", version = "0.4" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
base64 = "0.13.1"
tokio = { version = "1.23.0", features = ["net", "sync", "time", "rt"] }
tracing = "0.1.37"
async-rustls = { version = "0.3.0" }
tokio-util = { version = "0.7.4", features = ["compat"] }
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["server"], optional = true }
axum = { version = "0.6.1", features = ["tokio"], optional = true }
rustls-pemfile = "1.0.1"
async-trait = "0.1.59"
bytes = "1.3.0"
arc-swap = "1.5.1"
tokio-retry = "0.3.0"
awaitdrop = "0.1.1"
parking_lot = "0.12.1"
once_cell = "1.17.1"
hostname = "0.3.1"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.45.0"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }
anyhow = "1.0.66"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
reqwest = "0.11.13"
flate2 = "1.0.25"
tracing-test = "0.2.3"
rand = "0.8.5"
paste = "1.0.11"
tokio-tungstenite = { version = "0.18.0", features = ["rustls", "rustls-tls-webpki-roots"] }

[[example]]
name = "tls"
required-features = ["axum"]

[[example]]
name = "axum"
required-features = ["axum"]

[[example]]
name = "labeled"
required-features = ["axum"]

[[example]]
name = "mingrok"
required-features = ["hyper"]

[features]
default = []
hyper = ["dep:hyper"]
axum = ["dep:axum", "hyper"]
online-tests = ["axum", "hyper"]
long-tests = ["online-tests"]
authenticated-tests = ["online-tests"]
paid-tests = ["authenticated-tests"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
