[package]
name = "ngrok"
version = "0.14.0-pre.9"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The ngrok agent SDK"
repository = "https://github.com/ngrok/ngrok-rust"

[dependencies]
muxado = { path = "../muxado", version = "0.4" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
base64 = "0.21.7"
tokio = { version = "1.23.0", features = [
	"io-util",
	"net",
	"sync",
	"time",
	"rt",
] }
tracing = "0.1.37"
futures-rustls = { version = "0.25.1" }
tokio-util = { version = "0.7.4", features = ["compat"] }
futures = "0.3.25"
hyper = { version = "0.14.23" }
axum = { version = "0.6.1", features = ["tokio"], optional = true }
rustls-pemfile = "2.0.0"
async-trait = "0.1.59"
bytes = "1.3.0"
arc-swap = "1.5.1"
tokio-retry = "0.3.0"
awaitdrop = "0.1.1"
parking_lot = "0.12.1"
once_cell = "1.17.1"
hostname = "0.3.1"
regex = "1.7.3"
tokio-socks = "0.5.1"
hyper-proxy = { version = "0.9.1", default-features = false, features = [
	"rustls",
] }
url = "2.4.0"
rustls-native-certs = "0.6.3"
proxy-protocol = "0.5.0"
pin-project = "1.1.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_Foundation"] }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }
anyhow = "1.0.66"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
reqwest = "0.11.13"
flate2 = "1.0.25"
tracing-test = "0.2.3"
rand = "0.8.5"
paste = "1.0.11"
tokio-tungstenite = { version = "0.18.0", features = [
	"rustls",
	"rustls-tls-webpki-roots",
] }

[[example]]
name = "tls"
required-features = ["axum"]

[[example]]
name = "axum"
required-features = ["axum"]

[[example]]
name = "labeled"
required-features = ["axum"]

[[example]]
name = "mingrok"
required-features = ["hyper"]

[features]
default = []
hyper = ["hyper/server", "hyper/http1"]
axum = ["dep:axum", "hyper"]
online-tests = ["axum", "hyper"]
long-tests = ["online-tests"]
authenticated-tests = ["online-tests"]
paid-tests = ["authenticated-tests"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
