[package]
name = "ngrok-nginx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
ngrok = { path = "../../ngrok", version = "0.14.0-pre.11", features = ["axum", "hyper"] }
once_cell = "1.17.1"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.5.0"
